--- a/News parsing.ipynb
+++ b/News parsing.ipynb
@@ -347,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Парсинг Rambler новостей (BeautifulSoup + html2text)"
+    "## 2. Парсинг Хабр новостей (BeautifulSoup)"
    ]
   },
   {
